<?xml version="1.0" encoding="utf-8"?>
<!-- 
 Copyright (C) 2010 by Mathias Menninghaus (mmenning (at) uos (dot) de)
 
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.

 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical" android:scrollbars="vertical"
	android:scrollbarStyle="insideOverlay" android:fastScrollEnabled="true">

	<PreferenceCategory android:title="@string/ogl_view">
		<CheckBoxPreference android:title="@string/fullgraphics_title"
			android:key="@string/fullgraphics" android:summary="@string/fullgraphics_summary" />
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/map_view">
		<CheckBoxPreference android:title="@string/enablegooglemaps_title"
			android:key="@string/enablegooglemaps" android:summary="@string/enablegooglemaps_summary" />
		<CheckBoxPreference android:title="@string/enablesatellitetitle"
			android:dependency="@string/enablegooglemaps" android:key="@string/enablesatellite"
			android:summary="@string/enablesatellitesummary" />
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/wms">
		<CheckBoxPreference android:title="@string/enabletransparency_title"
			android:key="@string/enabletransparency" android:summary="@string/enabletransparency_summary" />
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/georss">
		<ListPreference android:title="@string/maxentries_title"
			android:summary="@string/maxentries_summary" android:key="@string/maxentries"
			android:entryValues="@array/maxentriesvalues" android:entries="@array/maxentriesarray" />
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/sos">
		<ListPreference android:title="@string/requestperiodtitle"
			android:summary="@string/requestperiodsummary" android:key="@string/requestperiod"
			android:entryValues="@array/requestperiodvalues" android:entries="@array/requestperiodarray" />

		<ListPreference android:title="@string/storeperiodtitle"
			android:summary="@string/storeperiodsummary" android:key="@string/storeperiod"
			android:entryValues="@array/storeperiodvalues" android:entries="@array/storeperiodarray" />
	</PreferenceCategory>
</PreferenceScreen>

