<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent">
	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:orientation="vertical"
		android:gravity="center_vertical" android:layout_marginLeft="6dip"
		android:layout_marginRight="6dip" android:layout_marginTop="6dip"
		android:layout_marginBottom="6dip">

		<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="@string/username"
			android:textAppearance="?android:attr/textAppearanceMedium" />

		<EditText android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:id="@+id/login:username" />

		<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="@string/password"
			android:textAppearance="?android:attr/textAppearanceMedium" />

		<EditText android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:id="@+id/login:password"
			android:password="true" />

		<CheckBox android:layout_width="fill_parent"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:layout_height="wrap_content" android:id="@+id/login:savepw"
			android:text="@string/savepassword" />


		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:gravity="center_horizontal"
			android:background="#ffaaaaaa">

			<Button android:layout_width="wrap_content"
				android:layout_weight="1" android:layout_height="fill_parent"
				android:id="@+id/login:confirm" android:text="@string/confirm"
				android:orientation="horizontal" android:gravity="center"
				android:layout_marginLeft="6dip" android:layout_marginRight="6dip"
				android:layout_marginTop="6dip" android:layout_marginBottom="6dip" />

			<Button android:layout_width="wrap_content"
				android:layout_weight="1" android:layout_height="fill_parent"
				android:id="@+id/login:cancel" android:text="@string/cancel"
				android:orientation="horizontal" android:gravity="center"
				android:layout_marginLeft="6dip" android:layout_marginRight="6dip"
				android:layout_marginTop="6dip" android:layout_marginBottom="6dip" />


		</LinearLayout>

	</LinearLayout>
</ScrollView>